make sure the #status-container is clickable (incr its z-index)

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -1008,6 +1008,7 @@ span.dropdown-group-item-name i {
 
 #status-container {
 
+  z-index: 5;
   overflow-x: scroll;
   display: flex;
   padding: 0 1em;
